# FortIDE

./: .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  FortIDE.aps  FortIDE.sln  FortIDE.vcxproj  FortIDE.vcxproj.filters  LICENSE  Main.cpp  Makefile  Project1.vcxproj  Project1.vcxproj.filters  README.md  build.sh  compile_commands.json  deps-adder.sh  imgui.ini  main  main.cpp  main.f90  pull.sh  resource.h  run.sh  vcpkg-configuration.json  vcpkg.json
.cache/clangd/index/: 32.h.FF136302B6DC10FA.idx  64.h.4686831DBD6FB90A.idx  ANTLRErrorListener.h.FFA3A7395E6F40B6.idx  ANTLRErrorStrategy.h.63A05252A497619E.idx  ANTLRFileStream.h.A6DECFE5F5109D70.idx  ANTLRInputStream.h.A8EE52FB803EB4E0.idx  ATN.h.520E2B853825CF0E.idx  ATNConfig.h.E521906EA96088D7.idx  ATNConfigSet.h.14A293BC47ADCAB8.idx  ATNDeserializationOptions.h.5B20BA2047142324.idx  ATNDeserializer.h.CE7A9250AB8E8420.idx  ATNSimulator.h.D3A13957DEEEB120.idx  ATNState.h.C84DE2D7814BD0E7.idx  ATNStateType.h.7DD68CC4B0372B60.idx  ATNType.h.6C6246933C4F9629.idx  AbstractParseTreeVisitor.h.8FC19EE3C8E3DFDF.idx  ActionTransition.h.00E10AFB49411C77.idx  AmbiguityInfo.h.E16E150A93A83589.idx  Angle.hpp.E65DEFECD7DE11DD.idx  Angle.inl.180C9CBFF8BEA156.idx  Any.h.5644C6BC2311E1B7.idx  ArrayPredictionContext.h.5C1A3E03C0664551.idx  Arrays.h.6893D99E962454BA.idx  AtomTransition.h.56E3F921303DBF24.idx  BailErrorStrategy.h.B8B5AB72F1169239.idx  BaseErrorListener.h.F41603A74757C0A6.idx  BasicBlockStartState.h.FC4C4CD0F377D304.idx  BasicState.h.74D48B2E05C03B02.idx  BitSet.h.ACD0B58D3F5ACCFA.idx  BlendMode.hpp.A5E97D9EFC83D8CF.idx  BlockEndState.h.4C05038413D5F282.idx  BlockStartState.h.CE5FF83758208123.idx  BufferedTokenStream.h.1F564B1A94174E90.idx  CPPUtils.h.484ADD40D96C48BE.idx  Casts.h.9FB5B8E048D56681.idx  CharStream.h.650651A1E2F91E0B.idx  Chunk.h.33A0F6E1B01B29CA.idx  CircleShape.hpp.8C719E91AD5A4929.idx  Clipboard.hpp.7AAF9C16F77D4AA9.idx  Clock.hpp.D42DF33A48CAD723.idx  (+1857 more)
.cmake/api/v1/reply/: cache-v2-e073f9afb26b3defb079.json  cmakeFiles-v1-183f7eeea65c66b98fcd.json  codemodel-v2-41b4842f733e31534bdb.json  index-2025-04-04T14-54-01-0151.json  target-FortIDE-Debug-a60efdae05e3b7cd0500.json
.codelite/: FortIDE_WorkSpace-peyton.tags  FortIDE_WorkSpace.session
.github/workflows/: main.yml
FortIDE/x64/Debug/: CodeAnalysisResultManifest.txt  Config.nativecodeanalysis.sarif  ErrorListener.nativecodeanalysis.sarif  FileTree.nativecodeanalysis.sarif  FortIDE.exe.recipe  FortIDE.ilk  FortIDE.res  FortIDE.vcxproj.FileListAbsolute.txt  Fortran90Lexer.nativecodeanalysis.sarif  Fortran90LexerBase.nativecodeanalysis.sarif  Fortran90Parser.nativecodeanalysis.sarif  Fortran90ParserBaseListener.nativecodeanalysis.sarif  Fortran90ParserBaseVisitor.nativecodeanalysis.sarif  Fortran90ParserListener.nativecodeanalysis.sarif  Fortran90ParserVisitor.nativecodeanalysis.sarif  Project1.vcxproj.FileListAbsolute.txt  TextEditor.nativecodeanalysis.sarif  c_Parser.nativecodeanalysis.sarif  config.obj.enc  f_MainMenu.nativecodeanalysis.sarif  f_MainMenu.nativecodeanalysis.xml  f_mainmenu.obj.enc  filetree.obj.enc  main.nativecodeanalysis.sarif  main.nativecodeanalysis.xml  main.obj.enc  mainfunc.nativecodeanalysis.sarif  mainfunc.nativecodeanalysis.xml  mainfunc.new.obj.enc  mainfunc.obj.enc  nfd_common.nativecodeanalysis.sarif  nfd_win.nativecodeanalysis.sarif  s_Parser.nativecodeanalysis.sarif  settings.obj.enc  vc.nativecodeanalysis.all.xml  vc143.idb
FortIDE/x64/Debug/FortIDE.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  FortIDE.lastbuildstate  FortIDE.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog
FortIDE/x64/Release/: FortIDE.exe.recipe  FortIDE.iobj  FortIDE.ipdb  FortIDE.vcxproj.FileListAbsolute.txt
FortIDE/x64/Release/FortIDE.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  FortIDE.lastbuildstate  FortIDE.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
antlr-lib/: antlr4-runtime.lib
build-dbg/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
colorText/: TextEditor.cpp  TextEditor.h
include-sfml/SFML/: CMakeCache.txt
jsons/: fortran_database.json
mainfunc/: Config.cpp  Config.h  c_Parser.cpp  c_Parser.h  f_MainMenu.cpp  f_MainMenu.h  ftg_core.h  mainfunc.cpp  mainfunc.h  nfd_common.h
mainfunc/F90Files/: ErrorListener.cpp  Fortran90Lexer.cpp  Fortran90Lexer.h  Fortran90LexerBase.h  Fortran90Parser.h  Fortran90Parser.interp  Fortran90ParserBaseListener.cpp  Fortran90ParserBaseListener.h  Fortran90ParserBaseVisitor.cpp  Fortran90ParserBaseVisitor.h  Fortran90ParserListener.h  Fortran90ParserVisitor.h
mainfunc/FileTree/: FileTree.cpp  FileTree.h
mainfunc/searchParser/: Parser.cpp
src/: Main.cpp
src/mainfunc/: Config.cpp  Config.h  List.cpp  List.h  Logger.h  MainFileViewer.h  NewFile.h  c_Parser.cpp  c_Parser.h  f_MainMenu.cpp  f_MainMenu.h  mainfunc.cpp  mainfunc.h
src/mainfunc/F90Files/: ErrorListener.h  Fortran90Lexer.g4  Fortran90Lexer.h  Fortran90Lexer.interp  Fortran90Lexer.java  Fortran90LexerBase.h  Fortran90Parser.cpp  Fortran90Parser.tokens  Fortran90ParserBaseVisitor.h  Fortran90ParserListener.cpp  Fortran90ParserListener.h  Fortran90ParserVisitor.cpp  Fortran90ParserVisitor.h
src/mainfunc/FileTree/: Editor.cpp  Editor.h  FileTree.cpp  FileTree.h
src/mainfunc/searchParser/: s_Parser.cpp  s_Parser.h
tabItem/: tabItem.cpp  tabItem.h
x64/Debug/: antlr4-runtime.exp  antlr4-runtime.lib  imgui.ini  packages.xml
x64/Release/: imgui.ini
